<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityDJ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="return_button">Return</string>
    
    <string name="server_address_summary">Set corresponding IP address of your server</string>
    <string name="server_address_summary_setted">Current server address: </string>
    <string name="network_enable_off">Check to enable auto-connection to the server</string>
    <string name="network_enable_on">Check to disconnect</string>
    <string name="network_connection_key">networkConn</string>
    <string name="server_address_key">serverAddr</string>
    <string name="network_connection_title">Connect to server</string>
    <string name="server_address_title">Server IP address</string>

</resources>